assets/css/style.css
/* Google Fonts used: Yuji Syuku, Allerta Stencil */ 
@import url('https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Yuji+Syuku&display=swap');

body {
    font-family: 'Yuji Syuku', serif;
    color: #1e2c40;
}

/* header */

#logo {
    height: 60px;
    width: 60px;
}

#container-fluid #logo {
    height: 32px;
    width: 32px;
}

.content-wrapper {
    display: block;
    width: 100%;
    margin-bottom: 10px;
}

/* footer */

footer {
    width: 100vh;
    text-align: center;
    background-color: #f8f9fa;
    padding-top: 1%;
    margin-top: 5%;
    height: 60px;
    display: block;
    width: 100%;
    clear: both;
}

footer ul {
    color: darkgray;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

footer li {
    display: inline;
    margin: 0 3%;
}

footer i {
    color: grey;
    font-size: large;
}

footer a :hover {
    color: black;
}

.footer-description {
    font-size: small;
    color: #0000008C;
}

.footer-description p {
    margin: 0;
    padding: 0 3px 5px;
    text-align: center;
}

/* main text */

h1 {
    text-align: center;
    font-weight: bold;
    margin: 0.75em 2px;
}

h2 {
    font-size: large;
    font-weight: bold;
    margin: 0.5rem 2px 0.1rem;
}

h3 {
    font-size: medium;
    font-weight: bold;
    margin: 1em 2px 3px;
}

h4 {
    font-size: medium;
    font-weight: bold;
    margin: 1em 2px 3px;
    text-decoration: underline solid lightgray;
}

h5 {
    font-size: 16px;
    margin: 1em 2px 3px;
}

p {
    margin: 0.25em 2px 0.25em;
    text-align: left;
}

.article {
    column-count: 3;
}

.article img {
    width: 100%;
    height: 100px;
    object-fit: cover;
    overflow: hidden;
    position: relative;
    margin: 0;
}

#welcome-image {
    width: 100%;
    height: 33vh;
    overflow: hidden;
    position: relative;
}

#welcome-subdiv {
    width: 100%;
    height: 33vh;
    background: url("../images/welcome-landscape.jpg") no-repeat center center;
    /* animation for welcome image */
    animation-name: welcome-animation;
    animation-duration: 6s;
    animation-fill-mode: forwards;
}

/* animation settings */
@keyframes welcome-animation {
    from {
        transform: translate(-50px, 0) scale(1.3);
    }
    to {
        transform: translate(0, 0) scale(1.3);
    }
}

#signup-form img {
    margin-bottom: -0.25rem;
    border: 1px solid #F8F9FA;
}

/* three-triangular accent above page title */
.accent {
    color: rgb(119, 31, 31);
    text-align: center;
    margin: 1% 2px -1.25rem;
    font-size: small;
}

/* avoid breaking up text between columns */
.card {
    break-inside: avoid;
    border: 0;
}

a:link, a:visited, a:hover, a:active { 
    text-decoration: none; 
}

a {
    color: rgb(119, 31, 31);
    font-weight: 600;
}

/* campervan description section (slides+description) */
.campervan-expose {
    margin: 2rem 0;
    border-top: lightgrey solid 1px;
    clear: both;
}

/* campervan Bootstrap carousel */
.slides {
    width: 40%;
    float: left;
    margin-right: 1%;
    margin: 1% 1% 1% 0;
}

.slides h2 {
    margin-bottom: 1%;
}

/* name of campervan */
.attention {
    color: rgb(119, 31, 31);
    font-size: larger;
}

.slides-description {
    margin: 0 2px;
    break-inside: avoid;
}

/* garage page */
#garage-image {
    background: url("../images/garage-mechanic.jpg") no-repeat center center;
    background-size: 100%;
    height: 33vh;
}

/* block of squares with services */
#garage-services {
    background: url("../images/garage.jpg") no-repeat center center;
    background-color: #F4E9E1;
    background-size: cover;
    width: 100%;
    overflow: hidden;
    font-family: 'Allerta Stencil', sans-serif;
}

/* individual square */
#garage-services div {
    background-color: rgba(255,255,255, 0.7);
    width: 16.666%;
    height: 300px;
    float: left;
    padding: 0 2px;
    border: 3px solid white;
    box-sizing: border-box;
}

#garage-services h2 {
    background-color: rgba(255,255,255, 0.5);
    padding: 0.25rem 1rem 0.25rem 0.25rem;
    display: inline-block;
}

/* faq */
#faq-accordion {
    font-family: 'Allerta Stencil', sans-serif;
    margin: 0 10%;
 }

 #faq-image {
    background: url("../images/compass.jpg") no-repeat center center;
    background-size: 100%;
    height: 33vh;
}

#faq-image

 #faq-accordion a {
     font-weight: normal;
}

details {
    background: #eee;
    padding: 10px;
    margin-top: 2%;
}

details > summary {
    color: rgb(119, 31, 31);
}

details > p {
    color: #444;
    padding: 6px 13px 0;
}

/* contact */
#hours th,td {
    border-bottom: 1px solid lightgray;
    text-align: right;
}

.details {
    text-align: right;
    line-height: 1em;
}

.details a {
    font-weight: normal;
}

#signup-form {
    background-color: #F4E9E1;
    width: 100%;
    margin-top: 0.5rem;
    padding: 0 0 4px;
    font-family: 'Allerta Stencil', sans-serif;
}

#signup-form h2, h3 {
    font-family: 'Yuji Syuku', serif;
}

.input-text {
    display: block;
    margin: 0.5rem 3px 0;
    width: 98%;
    border: none;
}

.input-box {
    display: block;
    margin: 0 3px;
    padding: 0.2rem 0.3rem;
    width: 98%;
    border: none;
    border-radius: 3px;
}

input[type=submit]:hover {
    background-color: #e4a5b3;
    border-radius: 3px;
}

.radio-button {
    margin-left: 1rem;
}

#signup-button {
    font-weight: bold;
    margin: 0 4px 2px;
    border-color: lightgray;
    border-radius: 3px;
}

/* Google Maps */
#map-wrapper {
    height: 80vh;
    margin-top: 1%;
}

#map {
    height: 100%;
    width: 100%;
}

/* 404 page */
#error-image {
    background: url("../images/road-landscape.jpg") no-repeat center center;
    background-size: 100%;
    height: 50vh;
}

#error-message {
    border-bottom: lightgrey solid 1px;
    margin-bottom: 1rem;
}

#error-message > p {
    text-align: center;
    font-size: larger;
}

/* media queries: */

/* medium screen */
@media screen and (max-width: 1080px) {
    .article {
        column-count: 2;
    }

    .slides {
        width: 60%;
    }

    #faq-accordion {
        margin: 0 3%;
    }
}

/* small screen */
@media screen and (max-width: 575px) {
    .article {
        column-count: 1;
    }

    .slides {
        width: 100%;
    }

    #garage-services div {
        width: 100%;
        clear: both;
        padding: 1.5%;
        height: 180px;
    }

    #faq-accordion {
        margin: 0 1%;
    }

    .card th,td {
        padding: 0 1%;
    }
}

